--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                     <h1>About me</h1>
                     <div class="about-item about-me">
                         <p>
-                            Hola, soy Manuel Alexander Montañez Gordillo, un estudiante de ingeniería mecánica apasionado por la tecnología y el desarrollo. Aunque carezco de experiencia profesional, he estado trabajando en diversos proyectos personales para expandir mis habilidades y conocimientos en este campo. Mi enfoque se centra en aprender y dominar lenguajes de programación como Python, JavaScript, HTML, CSS y React, lo que me ha permitido crear y desarrollar sitios web y aplicaciones propias. A pesar de estar en constante crecimiento, estoy entusiasmado por seguir aprendiendo y adquiriendo experiencia en el ámbito de la ingeniería mecánica y el desarrollo tecnológico. Estoy abierto a nuevas oportunidades y desafíos que me permitan aplicar mis habilidades y contribuir al crecimiento y la innovación en este fascinante campo.
-                        </p>
+                            I am Manuel Alexander Montañez Gordillo, a passionate mechanical engineering student with a strong interest in technology and development. Although I lack professional experience, I have been working on personal projects to expand my skills and knowledge in this field. I am constantly enthusiastic about learning and gaining experience in mechanical engineering and technology development. I am open to new opportunities and challenges to apply my skills and contribute to growth and innovation in this exciting field.
                     </div>
                     <div class="col-2">
                         <div class="about-item skills">
@@ -128,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="https://github.com/nietoperq">see more...</a>
+                    <a href="https://github.com/AlexMG18K">see more...</a>
                 </section>
                 <!--=============== CONTACT ===============-->
                 <section class="content-card contact" id="contact">
